force-app/main/default/objects/Proposal_Committee__c/Proposal_Committee__c.object-meta.xml
<CustomObject>
    <label>Proposal Committee</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Proposal Committee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Committee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>