force-app/main/default/objects/Proposal_Committee__c/fields/Application_Stages__c.field-meta.xml
<CustomField>
    <fullName>Application_Stages__c</fullName>
    <label>Application Stages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Stages</valueSetName>
    </valueSet>
</CustomField>