force-app/main/default/objects/Proposal_Committee__c/fields/Chair_CoChair_Reason_for_conflict__c.field-meta.xml
<CustomField>
    <fullName>Chair_CoChair_Reason_for_conflict__c</fullName>
    <label>Chair/CoChair Reason for conflict</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>