force-app/main/default/objects/Proposal_Committee__c/fields/Chair_CoChairConflict_Exist_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Chair_CoChairConflict_Exist_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chair/Co-Chair Conflict Exist Checkbox</label>
    <type>Checkbox</type>
</CustomField>