force-app/main/default/objects/Proposal_Committee__c/fields/chairCoChairNo_Conflict_Exist_Checkbox_1__c.field-meta.xml
<CustomField>
    <fullName>chairCoChairNo_Conflict_Exist_Checkbox_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Conflict Exist Checkbox 1</label>
    <type>Checkbox</type>
</CustomField>