force-app/main/default/objects/Proposal_Committee__c/fields/ChairCoChairNo_Conflict_Exist_Checkbox_2__c.field-meta.xml
<CustomField>
    <fullName>ChairCoChairNo_Conflict_Exist_Checkbox_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Conflict Exists Checkbox 2</label>
    <type>Checkbox</type>
</CustomField>