force-app/main/default/objects/Proposal_Committee__c/fields/Checkbox_1_forNoConflictExi__c.field-meta.xml
<CustomField>
    <fullName>Checkbox_1_forNoConflictExi__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I have no affiliation or financial connection with the institution or applicant(s) that might be construed as a conflict of interest. I believe that I can provide an objective evaluation.</inlineHelpText>
    <label>No Conflict Exists Checkbox 1</label>
    <type>Checkbox</type>
</CustomField>