force-app/main/default/objects/Proposal_Committee__c/fields/Commitee_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Commitee_Member_Name__c</fullName>
    <formula>TEXT(Committee_Member__r.Title__c) + &apos; &apos; + Committee_Member__r.First_Name__c + &apos; &apos; + Committee_Member__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commitee Member Name</label>
    <type>Text</type>
</CustomField>