force-app/main/default/objects/Proposal_Committee__c/fields/Committee_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Committee_Reviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Committee Reviewer</label>
    <type>Checkbox</type>
</CustomField>