force-app/main/default/objects/Proposal_Committee__c/fields/Confirm_Independent_assessment__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Independent_assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Independent assessment</label>
    <type>Checkbox</type>
</CustomField>