force-app/main/default/objects/Proposal_Committee__c/fields/Email_Sent_Time__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_Time__c</fullName>
    <label>Email Sent Time</label>
    <type>Email</type>
</CustomField>