force-app/main/default/objects/Proposal_Committee__c/fields/Feedback_to_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Feedback_to_Applicants__c</fullName>
    <inlineHelpText>Reviewers are requested to provide applicant-facing comments that address the strength and weakness of the proposal, including grantsmanship and provide suggestions, if they wish, for improving the project. Reviewers may paraphase comments from the above sections into the section. Please do not leave this section blank.</inlineHelpText>
    <label>Feedback to Applicants</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>