force-app/main/default/objects/Proposal_Committee__c/fields/NoConflictExistsCheckbox2__c.field-meta.xml
<CustomField>
    <fullName>NoConflictExistsCheckbox2__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I have affiliation or/and financial connection with the institution or applicant(s) that might be construed as a conflict of interest. A statement detailing the conflicts of interest is appended (see below). However, I can provide an objective evaluation.</inlineHelpText>
    <label>No Conflict Exists Checkbox 2</label>
    <type>Checkbox</type>
</CustomField>