force-app/main/default/objects/Proposal_Committee__c/fields/Proposal_Id__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Id__c</fullName>
    <formula>IF(
ISBLANK(Proposal__r.Proposal_Id__c),
&quot;&quot;,
Proposal__r.Proposal_Id__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal Id</label>
    <type>Text</type>
</CustomField>