force-app/main/default/objects/Proposal_Committee__c/fields/Reviewer_Response__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Response__c</fullName>
    <label>Reviewer Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Conditional</fullName>
            </value>
            <value>
                <fullName>Decline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>