force-app/main/default/objects/Proposal_Committee__c/fields/Scheme_Name__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Name__c</fullName>
    <formula>IF(
ISBLANK(Proposal__r.Yearly_Scheme__r.Scheme_Items__r.Name),
&quot;&quot;,
Proposal__r.Yearly_Scheme__r.Scheme_Items__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheme Name</label>
    <type>Text</type>
</CustomField>