force-app/main/default/objects/Proposal_Committee__c/fields/Shortlisted_for_Interview__c.field-meta.xml
<CustomField>
    <fullName>Shortlisted_for_Interview__c</fullName>
    <description>Should the applicant be shortlisted for Interview</description>
    <inlineHelpText>Should the applicant be shortlisted for Interview</inlineHelpText>
    <label>Shortlisted for Interview</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>